# liblfds-cmake-arm

./: CMakeLists.txt  LICENSE  README.md  Toolchain-android-armv7a.cmake
